// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter with function (T) => S | void event.filter should drop undefined values: evenNum event graph 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`event.filter with function (T) => S | void event.filter should drop undefined values: num event graph 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: callStack,
        check: defined
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                run: watcher
              ],
              next: []
            }
          ]
        }
      ]
    }
  ]
}"
`;
